# oak2-mod-manager

./: .cruft.json  .gitmodules  .typos.toml  CMakeLists.txt  CMakePresets.json  Readme.md  changelog.md  manager_pyproject.toml  pick_release_name.py  prepare_release.py  pyproject.toml
.github/workflows/: build.yml
src/: __main__.py
src/keybinds/: __init__.py  keybinds.cpp  keybinds.pyi
stubs/unrealsdk/: __init__.pyi
stubs/unrealsdk/commands/: __init__.pyi
stubs/unrealsdk/hooks/: __init__.pyi
stubs/unrealsdk/logging/: __init__.pyi
stubs/unrealsdk/unreal/: __init__.pyi  _bound_function.pyi  _experimental.pyi  _gbxdefptr.pyi  _uobject.pyi  _uobject_children.pyi  _uobject_children_deprecated.pyi  _weak_pointer.pyi  _wrapped_array.pyi  _wrapped_multicast_delegate.pyi  _wrapped_struct.pyi
